# wasmcloud-provider-bindgen-test

./: Cargo.toml
keyvalue/: Cargo.toml  build.rs
keyvalue-binary/: Cargo.toml
keyvalue-binary/src/: lib.rs  main.rs
keyvalue-binary/wit/: keyvalue.wit
keyvalue-host-module/: Cargo.toml
keyvalue/src/: lib.rs
keyvalue/wit/: keyvalue.wit
messaging/: Cargo.toml
messaging-binary/: Cargo.toml  expanded.rs
messaging-binary/src/: lib.rs  main.rs  types.rs
messaging-binary/wit/: messaging.wit
messaging-host-module/: Cargo.toml  build.rs
messaging-host-module/src/: main.rs
messaging/src/: lib.rs
src/: _main.rs  lib.rs
wit/: messaging.wit
