[package]
name = "wasmcloud-provider-bindgen-test"
version = "0.1.0"
edition = "2021"
description = """
Test lib for wit-bindgen-wasmcloud
"""

[dependencies]

wasmcloud-provider-macros = { path = "../forks/wasmCloud/crates/wasmcloud-provider-macros" } # , features = [ "debug" ] }
provider-sdk = { path = "../forks/wasmCloud/crates/provider-sdk" }

## NOTE: required due to codegen'd ProivderHandler implementation
async-trait = "0.1.72"

## NOTE: required due to use during macro (*inside* vendored version of wit-bindgen -- we can't change this)
wit-bindgen = "0.9.0"

# Serde's Serialize/Deserialize can't be re-exported
# https://github.com/serde-rs/serde/issues/1465
serde = { version = "1.0.175", features = ["derive"] }

## At some point, for otel support
#tracing = "0.1.37"
#tracing-futures = "0.2.5"
