[package]
name = "keyvalue-binary"
version = "0.1.0"
edition = "2021"
publish = false
description = """
An example provider that uses wasmcloud provider bindgen to generate a binary provider for wasmCloud
"""

[[bin]]
name = "keyvalue"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.72"
serde = { version = "1.0.175", features = ["derive"] }

# wasmCloud related requirements
wascap = "0.10"
wit-bindgen-wasmcloud-provider-binary = { path = "../../wit-bindgen-wasmcloud-provider-binary" }
wasmcloud-provider-sdk = { git = "https://github.com/wasmCloud/wasmCloud.git", branch = "main" }

[profile.release]
strip = true
opt-level = "z"
lto = true
