[package]
name = "wasmcloud-provider-bindgen-test-kv"
version = "0.1.0"
edition = "2021"
description = """
Test lib for wit-bindgen-wasmcloud using KV contract
"""

[dependencies]
wit-bindgen-wasmcloud-provider-host = { path = "../wit-bindgen-wasmcloud-provider-host" } #, features = [ "debug" ] }

wasmcloud-provider-sdk = { git = "https://github.com/wasmCloud/wasmCloud.git", branch = "main" }

## NOTE: required due to codegen'd ProivderHandler implementation
async-trait = "0.1.72"

## NOTE: required due to use during macro (*inside* vendored version of wit-bindgen -- we can't change this)
wit-bindgen = "0.9.0"

# Serde's Serialize/Deserialize can't be re-exported
# https://github.com/serde-rs/serde/issues/1465
serde = { version = "1.0.175", features = ["derive"] }

# NOTE: required due to host-side codegen
wasmtime = { version = "11.0.1", features = [ "component-model" ] }

## At some point, for otel support
#tracing = "0.1.37"
#tracing-futures = "0.2.5"
