[package]
name = "messaging-binary"
version = "0.1.0"
edition = "2021"
publish = false
description = """
An example provider that uses wasmcloud provider bindgen to generate a binary provider for wasmCloud
"""

[[bin]]
name = "nats_messaging"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-nats = "0.30"
async-trait = "0.1.72"
atty = "0.2"
base64 = "0.21"
bytes = "1.0"
chrono = "0.4"
crossbeam="0.8"
futures = "0.3"
once_cell = "1.8"
rmp-serde = "1.1.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# wasmCloud related requirements
wascap = "0.10"
wit-bindgen-wasmcloud-provider-binary = { path = "../../wit-bindgen-wasmcloud-provider-binary" } # , features = [ "debug" ] }
wasmcloud-provider-sdk = { git = "https://github.com/wasmCloud/wasmCloud.git", branch = "main" }

[profile.release]
strip = true
opt-level = "z"
lto = true
